main: Improvements to the main map

--- a/Assets/Editor/SplashScreen.uxml
+++ b/Assets/Editor/SplashScreen.uxml
@@ -1,7 +1,7 @@
 <engine:UXML xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xmlns:engine="UnityEngine.UIElements" xmlns:editor="UnityEditor.UIElements" noNamespaceSchemaLocation="../../UIElementsSchema/UIElements.xsd" editor-extension-mode="False">
     <Style src="project://database/Assets/baseCSS.uss?fileID=7433441132597879392&amp;guid=1bdd7d912a3b1394eb356a221e298e5f&amp;type=3#baseCSS" />
-    <engine:VisualElement class="panel1" style="flex-grow: 1; background-color: rgb(63, 42, 42); flex-direction: column; height: auto; width: auto;">
-        <engine:VisualElement style="flex-grow: 1; margin-top: 0; margin-right: 0; margin-bottom: 30px; margin-left: 0; height: 200px;">
+    <engine:VisualElement class="panel1" style="flex-grow: 1; background-color: rgb(31, 31, 31); flex-direction: row; height: auto; width: auto;">
+        <engine:VisualElement style="flex-grow: 1; margin-top: 0; margin-right: 0; margin-bottom: 30px; margin-left: 0; height: 200px; width: 300px;">
             <engine:Button text="Continue" name="continue" class="button1" style="font-size: 28px;" />
         </engine:VisualElement>
         <engine:VisualElement class="wallpaper">
